changed the structure of the sidebar in a way that it hopefully works

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,8 +10,10 @@ website:
     style: "docked"
     search: true
     contents:
-      - README.md
-      - index.qmd
+      - text: "The Index file you are seing right now"
+        href: index.qmd
+      - text: "The Readme file for good measures"
+        href: Readme.md
 
 execute:
   freeze: true
